crates/indexing_v1/tests/snapshots/indexing__duplicate_export_item.snap
---
source: crates/indexing/tests/indexing.rs
expression: errors
snapshot_kind: text
---
[
    DuplicateExport {
        existing: Id<syntax::cst::ExportItem>(0),
        duplicate: Id<syntax::cst::ExportItem>(1),
    },
    DuplicateExport {
        existing: Id<syntax::cst::ExportItem>(2),
        duplicate: Id<syntax::cst::ExportItem>(3),
    },
    DuplicateExport {
        existing: Id<syntax::cst::ExportItem>(4),
        duplicate: Id<syntax::cst::ExportItem>(5),
    },
    DuplicateExport {
        existing: Id<syntax::cst::ExportItem>(6),
        duplicate: Id<syntax::cst::ExportItem>(7),
    },
    DuplicateExport {
        existing: Id<syntax::cst::ExportItem>(6),
        duplicate: Id<syntax::cst::ExportItem>(7),
    },
    DuplicateExport {
        existing: Id<syntax::cst::ExportItem>(6),
        duplicate: Id<syntax::cst::ExportItem>(7),
    },
    DuplicateExport {
        existing: Id<syntax::cst::ExportItem>(8),
        duplicate: Id<syntax::cst::ExportItem>(9),
    },
    DuplicateExport {
        existing: Id<syntax::cst::ExportItem>(10),
        duplicate: Id<syntax::cst::ExportItem>(11),
    },
    DuplicateExport {
        existing: Id<syntax::cst::ExportItem>(12),
        duplicate: Id<syntax::cst::ExportItem>(13),
    },
]
