crates/indexing_v1/tests/snapshots/indexing__duplicate_type_item.snap
---
source: crates/indexing_v1/tests/indexing.rs
expression: errors
snapshot_kind: text
---
[
    DuplicateTypeItem {
        item_id: Id<indexing_v1::indexes::TypeItem>(0),
        duplicate: Declaration(
            Id<syntax::cst::Declaration>(1),
        ),
    },
    DuplicateTypeItem {
        item_id: Id<indexing_v1::indexes::TypeItem>(0),
        duplicate: Declaration(
            Id<syntax::cst::Declaration>(2),
        ),
    },
    DuplicateTypeItem {
        item_id: Id<indexing_v1::indexes::TypeItem>(0),
        duplicate: Declaration(
            Id<syntax::cst::Declaration>(3),
        ),
    },
    DuplicateTypeItem {
        item_id: Id<indexing_v1::indexes::TypeItem>(0),
        duplicate: Declaration(
            Id<syntax::cst::Declaration>(4),
        ),
    },
    DuplicateTypeItem {
        item_id: Id<indexing_v1::indexes::TypeItem>(1),
        duplicate: Declaration(
            Id<syntax::cst::Declaration>(6),
        ),
    },
    DuplicateTypeItem {
        item_id: Id<indexing_v1::indexes::TypeItem>(1),
        duplicate: Declaration(
            Id<syntax::cst::Declaration>(7),
        ),
    },
    DuplicateDeclaration {
        declaration: Id<syntax::cst::Declaration>(8),
        duplicate: Id<syntax::cst::Declaration>(9),
    },
    DuplicateTypeItem {
        item_id: Id<indexing_v1::indexes::TypeItem>(3),
        duplicate: Declaration(
            Id<syntax::cst::Declaration>(11),
        ),
    },
]
