crates/indexing_v1/tests/snapshots/indexing__type_late_signature.snap
---
source: crates/indexing/tests/indexing.rs
expression: errors
snapshot_kind: text
---
[
    InvalidOrder {
        early: Id<syntax::cst::Declaration>(0),
        late: Id<syntax::cst::Declaration>(1),
    },
]
