crates/indexing_v1/tests/snapshots/indexing__type_non_consecutive.snap
---
source: crates/indexing/tests/indexing.rs
expression: errors
snapshot_kind: text
---
[
    NonConsecutive {
        first: Id<syntax::cst::Declaration>(0),
        second: Id<syntax::cst::Declaration>(3),
    },
]
