crates/indexing_v1/tests/snapshots/indexing__value_duplicate_signature.snap
---
source: crates/indexing/tests/indexing.rs
expression: errors
snapshot_kind: text
---
[
    DuplicateSignature {
        signature: Id<syntax::cst::Declaration>(0),
        duplicate: Id<syntax::cst::Declaration>(3),
    },
]
