crates/indexing_v1/tests/snapshots/indexing__value_non_consecutive.snap
---
source: crates/indexing/tests/indexing.rs
expression: errors
snapshot_kind: text
---
[
    NonConsecutive {
        first: Id<syntax::cst::Declaration>(1),
        second: Id<syntax::cst::Declaration>(3),
    },
]
